Added Blog Descriptions

--- a/posts/Perceptron/index.ipynb
+++ b/posts/Perceptron/index.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "<!-- Link to [perceptron source code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/blog4/perceptron.py). -->\n",
     "\n",
-    "This blog post explores the implementation and behavior of the perceptron algorithm. Using PyTorch, we implement perecepton grad and optimizing functionality. We analyze how the perceptron performs under different scenarios: linearly separable data, non-linearly separable data, and high-dimensional inputs. The goal is to observe how the perceptron learns from data and how its performance is affected by noise, dimensionality, and training strategies such as stochastic and mini-batch updates."
+    "This blog post explores the implementation and behavior of the perceptron algorithm. Using PyTorch, I implement perecepton grad and optimizing functionality. I analyze how the perceptron performs under different scenarios: linearly separable data, non-linearly separable data, and high-dimensional inputs. The goal is to observe how the perceptron learns from data and how its performance is affected by noise, dimensionality, and training strategies such as stochastic and mini-batch updates."
    ]
   },
   {
