--- a/posts/descent/index.ipynb
+++ b/posts/descent/index.ipynb
@@ -12,7 +12,7 @@
     "title: Overfitting and Double Descents\n",
     "author: Emmanuel Towner\n",
     "date: '2025-04-23'\n",
-    "description: \"Blog Post 6\"\n",
+    "description: \"In this blog post, I explore the deep learning phenomenon of overfitting and the resulting double descent using a linear regression model and an overparameterized optimizer. I evaluated the model by its mean squared error (MSE) based on number of features.\"\n",
     "format: html\n",
     "---"
    ]
