--- a/posts/optimization/index.ipynb
+++ b/posts/optimization/index.ipynb
@@ -13,7 +13,7 @@
     "title: Advanced Optimization\n",
     "author: Emmanuel Towner\n",
     "date: '2025-05-07'\n",
-    "description: \"Blog Post 8\"\n",
+    "description: \"In this blog post, I explore three advanced optimization techniques—Newton’s Method, the Adam optimizer, and Gradient Descent Optimizer—in the context of logistic regression applied to heart disease prediction. The goal is to understand how different optimization algorithms influence model performance and training dynamics in a binary classification tasks.\"\n",
     "format: html\n",
     "---"
    ]
