--- a/posts/kernel/index.ipynb
+++ b/posts/kernel/index.ipynb
@@ -13,7 +13,7 @@
     "title: Sparse Kernel Machines\n",
     "author: Emmanuel Towner\n",
     "date: '2025-04-29'\n",
-    "description: \"Blog Post 7\"\n",
+    "description: \"In this post, I implement a sparse kernel logistic regression using radial basis function (RBF) kernels. Additionally, explore how  regularization strength (𝜆) and the bandwidth (𝛾) effect influence it’s sparsity and overfitting.\"\n",
     "format: html\n",
     "---"
    ]
@@ -29,7 +29,7 @@
     "\n",
     "<!-- [Link to source code](https://github.com/EpicET/EpicET.github.io/blob/main/posts/blog7/kernel_logistic.py) -->\n",
     "\n",
-    "In this post, we explore sparse kernel logistic regression using radial basis function (RBF) kernels. We demonstrate how sparsity naturally emerges in these models, meaning only a subset of training points — the support vectors — contribute significantly to the final decision function. We examine how key hyperparameters like the regularization strength (𝜆) and the kernel sharpness (𝛾) influence model behavior, including sparsity, decision boundaries, and overfitting. Through several experiments, we visualize decision surfaces, investigate the impact of parameter choices, and show how kernel methods can capture nonlinear patterns effectively. To evaluate generalization, we conclude with an overfitting case study using ROC curves to compare training and test performance.\n"
+    "In this post, I explore sparse kernel logistic regression using radial basis function (RBF) kernels. I demonstrate how sparsity naturally emerges in these models, meaning only a subset of training points contribute significantly to the final decision function. I examine how key hyperparameters like the regularization strength (𝜆) and the bandwidth (𝛾) influence model behavior, including sparsity, decision boundaries, and overfitting. Through several experiments, I visualize decision surface, investigate the impact of parameter choices, and show how kernel methods can capture nonlinear patterns effectively. To evaluate generalization, I conclude with an overfitting case study using ROC curves to compare training and test performance.\n"
    ]
   },
   {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "97eb244d",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
     "plt.plot([0, 1], [0, 1], \"k--\", alpha=0.5)\n",
     "plt.xlabel(\"False Positive Rate\")\n",
     "plt.ylabel(\"True Positive Rate\")\n",
-    "plt.title(\"ROC Curves: Overfitting Example\")\n",
+    "plt.title(\"ROC Curves: Overfitting\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
@@ -534,7 +534,7 @@
    "id": "5645d4e7",
    "metadata": {},
    "source": [
-    "In this experiment, we simulate the problem of overfitting by training a kernel logistic regression model with extremely high gamma of 1000. This allows the model to fit the training data very closely, but it generalizes poorly to unseen test data.\n",
+    "In this experiment, I simulate the problem of overfitting by training a kernel logistic regression model with extremely high gamma of 1000. This allows the model to fit the training data very closely, but it generalizes poorly to unseen test data.\n",
     "\n",
     "The (AUC) score for training set was near with perfect with 0.99 but the testing set was near 0.72. This large gap between train and test AUCs is a sign that there is overfitting.\n"
    ]
@@ -550,7 +550,7 @@
     "\n",
     "- Sparsity and Regularization: When using a large regularization parameter (𝜆 = 166), only 1 out of 100 training points had a weight (α) greater than 0.001, demonstrating extreme sparsity. In contrast, with a smaller 𝜆 (e.g., 0.1), a larger fraction of points acted as support vectors, contributing to the decision boundary.\n",
     "\n",
-    "- Effect of Gamma (𝛾): By varying 𝛾 from 1 to 100, we observed that the decision boundary became increasingly complex and less smooth. For example, at 𝛾 = 1, the boundary was broad and circular, while at 𝛾 = 100, it became highly irregular, closely fitting the training data.\n",
+    "- Effect of Gamma (𝛾): By varying 𝛾 from 1 to 100, I observed that the decision boundary became increasingly complex and less smooth. For example, at 𝛾 = 1, the boundary was broad and circular, while at 𝛾 = 100, it became highly irregular, closely fitting the training data.\n",
     "\n",
     "- Nonlinear Data: On a challenging, noisy dataset (400 points, noise = 0.9), the kernelized model with 𝛾 = 10 was still able to capture the nonlinear patterns.\n",
     "\n",
