--- a/posts/audit/index.ipynb
+++ b/posts/audit/index.ipynb
@@ -2016,7 +2016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Concluding Discussion\n",
+    "<!-- ## Concluding Discussion\n",
     "\n",
     "1. If we assume that these institutions don't already have employment data, then it could be used by financial and government institutions. For example, a bank may use employment status prediction to determine whether to give a loan to someone. The government could use its prediction to determine where they need to improve in providing employment opportunities. Landlords could use this information to decide if they want to accept a tenant or how much they would charge them.\n",
     "\n",
@@ -2024,7 +2024,7 @@
     "\n",
     "3. My model failed tests of statistical parity and error rate balance, which means that it does display problematic biases.\n",
     "\n",
-    "4. I think transparency might be an issue if the algorithm is not shared with the public, as people would unknowingly be judged by an algorithm. I'm unsure if this is bias, but smaller populations have very weird data points that probably don't accurately reflect what's going on. I feel like there could be some social bias or judgment as a result of this algorithm, especially for people who aren't employed or predicted to not be employed.\n",
+    "4. I think transparency might be an issue if the algorithm is not shared with the public, as people would unknowingly be judged by an algorithm. I'm unsure if this is bias, but smaller populations have very weird data points that probably don't accurately reflect what's going on. I feel like there could be some social bias or judgment as a result of this algorithm, especially for people who aren't employed or predicted to not be employed. -->\n",
     "\n",
     "## Acknowledgements\n",
     "\n",
