--- a/posts/logistic/index.ipynb
+++ b/posts/logistic/index.ipynb
@@ -15,6 +15,7 @@
     "date: '2025-04-9'\n",
     "description: \"This blog post implements logistic regression with momentum from scratch in Python and performs three experiments evaluating the loss and accuracy.\"\n",
     "format: html\n",
+    "draft: true\n",
     "---"
    ]
   },
