--- a/posts/palmer/index.ipynb
+++ b/posts/palmer/index.ipynb
@@ -15,6 +15,7 @@
     "image: \"penguins.jpg\"\n",
     "description: \"In this blog post, I analyze the Palmer Penguins dataset to identify the best features for determining penguin species based on their measurements.\"\n",
     "format: html\n",
+    "draft: true\n",
     "---"
    ]
   },
