--- a/posts/pneumonia/Final_Project_BP.ipynb
+++ b/posts/pneumonia/Final_Project_BP.ipynb
@@ -16,7 +16,9 @@
     "image: 'image.png'\n",
     "description: In this project, we built a convolutional neural network (CNN) to embed chest X-ray images into a latent space, then compared three binary classifiers—Support Vector Machine, XGBoost, and Transformer—on their ability to detect pneumonia. \n",
     "format: html\n",
+    "draft: true\n",
     "bibliography: refs.bib\n",
+    "\n",
     "---"
    ]
   },
