--- a/about.qmd
+++ b/about.qmd
@@ -6,7 +6,7 @@ about:
   links:
     - icon: linkedin
       text: LinkedIn
-      href: https://www.linkedin.com/in/emmanuel-t-12b558211/
+      href: https://linkedin.com
     - icon: github
       text: Github
       href: https://github.com/EpicET
