--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,37 @@
 ---
-title: "Machine Learning Blog"
-listing:
-  contents: posts
-  sort: "date desc"
-  type: default
-  categories: true
-  sort-ui: false
-  filter-ui: false
-page-layout: full
+title: "Home"
+format: html
 ---
 
- 
+## 👋 Hi, I'm Emmanuel Towner
+
+I'm a full-stack developer and ML enthusiast passionate about building accessible, clean web experiences.
+
+[View My Projects](projects.qmd) | [Read My Blog](posts.qmd)
+
+---
+
+## 🖥️ Featured Projects
+
+- **[Pneumonia Classification](projects/vit/vit.qmd)**  
+  A deep learning project using Vision Transformers to classify pneumonia in chest X-rays, achieving 95% accuracy.
+
+- **[Banking Application](projects/bank/bank_app.qmd)**  
+  A full-stack web application simulating bank functions, built with Java SpringBoot and React.
+
+- **[MiddHousing](projects/middhousing/middhousing.qmd)**
+  A web app for Middlebury students to find and review dorm rooms, featuring a campus map and user reviews.
+
+---
+
+## 📝 Latest Blog Post
+
+- **[Pneumonia Detection Project](posts/pneumonia/Final_Project_BP.ipynb)**  
+  An exploration of deep learning techniques for pneumonia detection in chest X-rays.
+
+---
+## 📬 Let's Connect
+
+[GitHub](https://github.com/yourusername) | 
+[LinkedIn](https://linkedin.com/in/yourusername) | 
+[Email](mailto:youremail@example.com)
