--- a/projects/vit/vit.qmd
+++ b/projects/vit/vit.qmd
@@ -2,6 +2,7 @@
 title: "Pneumonia Classification with Vision Transformer"
 author: Emmanuel Towner
 format: html
+image: 'image.png'
 ---
 
 ## Overview
